--- a/site/data/docs/custom-app-info.mdx
+++ b/site/data/docs/custom-app-info.mdx
@@ -27,7 +27,9 @@ const App = () => {
 };
 ```
 
-You can also provide your dapp's Terms of Service `termsOfServiceUrl` and Disclaimer `disclaimerUrl`, which will be displayed at the bottom of the connect modal:
+## Terms of Service
+
+You can also provide your own's Terms of Service (`termsOfServiceUrl`) and Disclaimer (`disclaimerUrl`):
 
 ```tsx
 import { RainbowKitProvider } from '@rainbow-me/rainbowkit';
